--- a/Week3CodingAssignment.html
+++ b/Week3CodingAssignment.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Week 3 Assignment Question 1</title>
+        <title>Week 3 Assignment</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <h1>Week 3 Coding Assignment Question 1</h1>
+        <h1>Week 3 Coding Assignment</h1>
         
         
-        <script src="Question 1.js"></script>  
+        <script src="Week3CodingAssignment.js"></script>  
     </body>
 </html>
